fix examples manager for deploy

--- a/TFG_UO270235/package.json
+++ b/TFG_UO270235/package.json
@@ -2,6 +2,7 @@
   "name": "TFG_UO270235",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://uo270235.github.io/rdf_visualizer/",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
