--- a/TFG_UO270235/package.json
+++ b/TFG_UO270235/package.json
@@ -11,12 +11,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chai": "^5.1.1",
     "clipboard": "^2.0.11",
     "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "mermaid": "^10.9.1",
+    "mocha": "^10.6.0",
     "path-browserify": "^1.0.1",
+    "puppeteer": "^22.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
