--- a/TFG_UO270235/package.json
+++ b/TFG_UO270235/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chai": "^5.1.1",
+    "chalk": "^4.1.2",
     "clipboard": "^2.0.11",
     "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
